0.61.11.0/_sources/Reference/NodeReference/GafferScene/ShuffleAttributes.md.txt
ShuffleAttributes
=================

ShuffleAttributes is used to copy or rename arbitrary numbers of attributes at
the filtered locations. The deleteSource plugs may be used to remove the original
source attribute(s) after the shuffling has been completed.

An additional context variable "${source}" can be used on the destination plugs
to insert the name of each source attribute. For example, to prefix all attributes
with "user:" set the source to "*" and the destination to "user:${source}").

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

shuffles
--------

The attributes to be shuffled - arbitrary numbers of attributes may be
shuffled via the source/destination plugs. The deleteSource plug may be
used to remove the original attribute(s).